# coach-ai

./: .env.example  .gitignore  API_DOCUMENTATION.md  API_VALIDATION_REPORT.md  BACKEND_STATUS_REPORT.md  CODE_QUALITY_REPORT.md  CODE_REVIEW_CHECKLIST.md  CODE_REVIEW_REPORT_2026-03-25.md  DAY3_COMPLETION_REPORT.md  DAY4_EXERCISE_MODULE_REPORT.md  DEFECT_TRACKING.md  Dockerfile  FINAL_BACKEND_STATUS.md  FRONTEND_DEVELOPMENT_SUMMARY.md  IMMEDIATE_FIXES.md  LICENSE  Makefile  PROJECT_SNAPSHOT.md  QA_PREPARATION_CHECKLIST.md  README.md  README_IMPORT_SETUP.md  TESTING_WORK_SUMMARY.md  TEST_CASES.md  TEST_PLAN.md  apply_accounts_migration.py  apply_migration.py  clean_test_data.py  cleanup_coding_plan.md  create_achievements_tables.sql  create_tasks_tables.sql  docker-compose.yml  final_solution.py  fix_all_constraints.py  fix_all_tasks_columns.sql  fix_apps_names.py  fix_migration_deps.py  fix_migration_order.py  fix_model_constraints.py  fix_models.py  fix_remaining_imports.py  (+55 more)
.rules/: coding-style.md
apps/: __init__.py
coachai_code/: main.py  simple_test.py  test_auth_tenant.py
coding/: __init__.py  config.py  config.py.migrated  main.py  test_auth_tenant.py  test_framework.py
coding_backup/: main.py  test_auth_tenant.py
config/: __init__.py  asgi.py  urls.py  wsgi.py
convention/: coding-style.md
core/: __init__.py  constants.py  exceptions.py  middlewares.py  paginations.py  permissions.py  responses.py  utils.py
docs/: API_DOCUMENTATION.md  BRD.md  DEPLOYMENT_GUIDE.md  HOMEWORK_MODULE_DEVELOPMENT.md  MIGRATION_SUMMARY.md  TECH_ARCHITECTURE_OVERVIEW.md  TECH_DETAILED_DESIGN.md  TECH_DETAILED_DESIGN.md.backup  exercise_api.md  task_module_api.md  文档索引.md  项目交付里程碑计划.md  项目研发里程碑计划.md
documents/: PRD.md  Web层迁移进展_2026-03-27.md
examples/: achievement_system_usage.py
frontend/: .env.example  FRONTEND_ARCHITECTURE.md  README.md  package-lock.json  package.json
migration-reports/: migration-check-20260327-154148.json  migration-check-20260327-154326.json  migration-check-20260327-154753.json
product-docs/: PRD.md  PRODUCT_BACKLOG.md  PRODUCT_VISION.md  README.md
reports/: phase2_day3_summary.md
scripts/: check_achievement_system.py  create_achievement_tables.py  create_task_tables.py  deploy.sh  final_cleanup.py  run_tests.py  setup_dev.sh  setup_environment.sh  test_achievement_system.py
services/: __init__.py  analytics.py  analytics_complete.py  analytics_continued.py  analytics_final.py  analytics_simple.py  apps.py  base.py  manager.py  prediction.py  recommendation.py
spec/: 前端代码编码规范.md  数据库表设计规范.md
src/: __init__.py  main.py  requirements.txt  run.sh  settings.py
test-reports/: TEST-REPORT.md  test-report-20260327-151919.json
tests/: TEST_STRATEGY.md  __init__.py  conftest.py  ddd_conftest.py  test_project_structure.py
(+356 files in other folders)
